--- a/views/mod/customavatar.ejs
+++ b/views/mod/customavatar.ejs
@@ -9,7 +9,7 @@
         margin-bottom: 30px;
         color: inherit;
         background-color: #eee;
-        
+
         width:95%;
     }
 
@@ -64,18 +64,21 @@
     <div>
         Avatars:
         <ul>
-            <li>Must be easily identifyable as res or spy.</li>
-            <li>Must have at least 20% of the original colour (blue or red) and a minimum of the opposite allegiance's colour (approximation).</li>
-            <li>Must not be inappropriate.</li>
-            <li>Must have similar Res and Spy avatars.</li>
-            <li>Must not be similar to any other existing custom avatars (unless the avatar was yours initially).</li>
-            <li>Must be 128x128 px in size.</li>
-            <li>Must be a png file.</li>
-            <li>Must have a transparent background (solid white will hurt the eyes of dark theme users!).</li>
-            <li>Must resemble the base avatar images.</li>
-            <li>Must keep the wordage to a minimum.</li>
-            <li>Must be hosted on Discord or Imgbb. Click <a href="/profile/avatargetlinktutorial">here</a> for a tutorial on how to get a good link.</li>
-            <li>Moderators have the final say, based on their judgment. Feel free to consult them before making your avatars to ensure they will adhere to these guidelines.</li>
+          <li>(Note: these rules are modified for private server)</li>
+          <li>In addition to submitting this form, if the player hasn't done so, said player should be reminded to contact mods regarding future avatar requests.</li>
+          <li>Read rule 1 again, mods here have less time and shouldn't be expected to check this server often.</li>
+          <li>Must have at least 5px transparent border. (non-transparent border breaks website features)</li>
+          <li>Must be easily identifyable as res or spy.</li>
+          <li>Must have at least 20% of the original colour (blue or red) and a minimum of the opposite allegiance's colour (approximation).</li>
+          <li>Must not be inappropriate.</li>
+          <li>Must have similar Res and Spy avatars.</li>
+          <li>Must be 128x128 px in size.</li>
+          <li>Must be a png file.</li>
+          <li>Must have a transparent background (solid white will hurt the eyes of dark theme users!).</li>
+          <li>Must resemble the base avatar images.</li>
+          <li>Must keep the wordage to a minimum.</li>
+          <li>Preferably hosted on Discord or Imgbb. See <a href="/profile/avatargetlinktutorial">here</a> for a tutorial.</li>
+          <li>Moderators have the final say, based on their judgement.</li>
 
         </ul>
     </div>
@@ -84,9 +87,7 @@
     <div>
         Players:
         <ul>
-            <li>Must have played at least 100 games (with the exception of old regular players).</li>
-            <li>Must be an active player of the public Resistance community.</li>
-            <li>Will not be allowed multiple avatars over a number of alternate accounts (open to discussion).</li>
+            <li>Must have played at least 1 game of Avalon (irl counts).</li>
         </ul>
     </div>
 
@@ -121,7 +122,7 @@
                                 <img class="avatarImg" src=<%= avreq.spyLink %>>
                                 <div class="imgdimensions">Loading</div>
                                 <div class="link"></div>
-                                
+
                             </div>
                         </div>
                     </div>
@@ -172,27 +173,27 @@ $( document ).ready(function() {
     console.log( "ready!" );
 
     // <div class="imgdimensions">test x asdf px</div>
-    
+
     setInterval(function(){
         var imgdimensions = $(".imgdimensions");
         var links = $(".link");
 
         console.log(imgdimensions);
         console.log("test");
-    
+
         for(var i = 0; i < imgdimensions.length; i++){
             console.log(imgdimensions[i].parentElement.children[0]);
-    
+
             var x = imgdimensions[i].parentElement.children[0].clientWidth;
             var y = imgdimensions[i].parentElement.children[0].clientHeight;
-    
-    
+
+
             imgdimensions[i].innerText = x + "x" + y + " px";
 
             links[i].innerText = $(imgdimensions[i].parentElement.children[0]).attr("src");
         }
     }, 1000);
-    
+
 
     // imgdimensions.forEach(function(dim){
     //     console.log(dim.parent().children(0));
@@ -221,7 +222,7 @@ $( document ).ready(function() {
         $(e.target).closest(".rootRequest").addClass("hide-opacity");
 
     });
-    
+
 
 
     $(".reject").on("click", function(e){
@@ -282,8 +283,3 @@ function processAvatarRequest(decision, avatarreqid, comment){
 
 
 <% include ../partials/footer %>
-
-
-
-
-
