changes for private server

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -123,7 +123,7 @@
 							<li><a href="/about">About</a></li>
 							<% } %>
 
-							<li><a href="https://github.com/vck3000/ProAvalon">Github</a></li>
+							<li><a href="https://github.com/wgdevs/ProAvalon">Github</a></li>
 						</ul>
 					</li>
 					<% if(locals.isMod && isMod === true){ %>
