--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,7 +5,7 @@
 <style>
 
     img {
-         float: left; 
+         float: left;
     }
 
     #mainBodyContent {
@@ -31,7 +31,7 @@
         left: 0%;
 
         opacity: 0.5;
-        filter: alpha(opacity=50); */   /* For IE8 and earlier */ 
+        filter: alpha(opacity=50); */   /* For IE8 and earlier */
     }
 
 
@@ -39,7 +39,7 @@
         content: "";
         display: block;
         position: absolute;
-        z-index: -1;   
+        z-index: -1;
         width: 100%;
         height: 100%;
         background-image: url("/avatars/pronub-res.png");
@@ -72,56 +72,22 @@
 
 
 <div class="container" id="mainBodyContent">
-    <h1>About myself and this site</h1>
-
-    <br>
-    <img id="myAvatar" src="/avatars/pronub-res.png" class="">
-    
-
-    <p>
-        My name is Victor (ProNub), you may call me either :). I am a university student studying Engineering, Physics and Computer Science. 
-    </p>
-
-    <p>
-        This site is a platform to play The Resistance on. 
-        This site was written from scratch, however heavily based on cashto's original design to keep a similar interface for familiar users. 
-    </p>
-    
-    <p>
-        I started making this site with the main goal for me to learn web development and enhance my programming skills. 
-        It was a good excuse for me to learn cool things like HTML, CSS, JS and NodeJs. 
-    </p>
-
-    <p>
-        If you are interested in the security of this site and a mini-lecture from 
-        me to protect yourselves online, take a look <a href="/security">here</a>. 
-    </p>
-
-    <p>
-        You may contact me by email at admin@proavalon.com, or through discord. Feel free to throw me a direct message or ping me on the discord server. My discord username and tag is pkvk9122 #6596. 
-    </p>
-
-    <p>
-        I would also like to acknowledge the tremendous help of Ref-rain and Hakha3 who both have tirelessly provided me with feedback
-        from the very start of this site, all the way till release and beyond. Without the help of these two, this site would not be possible. Thank you guys :).
-    </p>
+    <h1>About this site</h1>
 
     <br>
 
     <p>
-        If you would like to check out the code, hop onto the Github repository here:<br><a href="https://github.com/vck3000/ProAvalon">https://github.com/vck3000/ProAvalon</a>
+        This site is a private server for ProAvalon. The source code for it can be seen at <a href="https://github.com/wgdevs/ProAvalon">https://github.com/wgdevs/ProAvalon</a>.
     </p>
 
     <p>
-        Now go play a game!
+        This site is forked from <a href="https://github.com/vck3000/ProAvalon">https://github.com/vck3000/ProAvalon</a>.
     </p>
 
-    <br>
-    <br>
-
-    <p> 
-     -Victor (ProNub) 16/07/2018
+    <p>
+      This site preserves the security features of the original repo, as described <a href="/security">here</a>.
     </p>
+
 
 
 </div>
